--- a/indexstylesheet.css
+++ b/indexstylesheet.css
@@ -10,6 +10,29 @@ body {
     scroll-behavior: smooth;
 }
 
+body.dark {
+    background-color: #121212;
+    color: #fff;
+}
+
+#navbar {
+    background-color: #edf2f4;
+    color: #fff;
+}
+
+#navbar-scrollspy {
+    background-color: #edf2f4;
+}
+
+.nav-link.active {
+    color: #f0c808 !important;
+
+}
+
+.navbar-text {
+    padding-right: 10%;
+}
+
 section {
     height: 100vh;
     padding: 80px 20px 20px;
@@ -23,12 +46,93 @@ section {
     text-align: center;
 }
 
-
-#navbar-scrollspy {
-    background-color: #edf2f4;
+section#home {
+    position: relative;
 }
 
-.nav-link.active {
-    color: #f0c808 !important;
+.scroll-down-indicator {
+    position: absolute;
+    bottom: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 2.5rem;
+    animation: bounce 1.5s infinite;
+    color: #000000;
+    /* o el color que prefieras */
+    z-index: 1000;
+}
 
+@keyframes bounce {
+
+    0%,
+    100% {
+        transform: translateX(-50%) translateY(0);
+    }
+
+    50% {
+        transform: translateX(-50%) translateY(10px);
+    }
+}
+
+#buttonNightMode {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 999;
+    padding: 10px 15px;
+    background-color: #f0c808;
+    color: #000;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
+
+
+.photoMe {
+    max-width: 100%;
+    width: 70%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    justify-content: right;
+    padding-right: 0%;
+    border-radius: 5%;
+    transition: box-shadow 0.3s ease;
+}
+
+.photoMe:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+}
+
+.h2Aboutme {
+    font-size: 100px;
+}
+
+.paragraphAboutMe {
+    text-align: left;
+    padding-right: 40px;
+}
+
+.icon-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    padding: 40px;
+    text-align: center;
+}
+
+.icon-container i,
+.icon-container span {
+    font-size: 48px;
+    /* Tamaño del ícono */
+    transition: transform 0.3s ease;
+}
+
+.icon-container i:hover,
+.icon-container span:hover {
+    transform: scale(1.2);
 }
